5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1771_1580.log
== TEST (2019-05-22 22:31:04) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(eval(input("Digite o nome dos alunos: ")))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:31:43) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:32:36) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:32:38) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:33:03) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(f)		
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:33:35) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
print(g)
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(f)		
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:33:58) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
print(size(x))
while(f<(size(x))):
	if(x[f]==-1):
		g=g+1
		f=f+1
print(f)		
print(g)		
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:34:43) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while((size(x))>f):
	print(f)
	f=f+1
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:35:27) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while((size(x))>f):
	if((x[f])==-1):
		print(f)
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:36:05) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while((size(x))>f):
	if((x[f])==-1):
		print(f)
		f=f+1
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:41:37) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while((size(x))>f):
	if(x[f]==-1):
		print(f)
		f=f+1
		
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:42:25) 
-- CODE:
from numpy import*
x=array(eval(input("O valor das notas: ")))
y=array(input("Digite o nome dos alunos: "))
f=0
g=0
h=0
while(f<(size(x))):
	if(x[g]==-1):
		print(f)
		g=g+1
		f=f+1
		
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:43:44) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
print(x)
		
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:43:58) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
print(x[0])
		
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:44:31) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	print(j)
	j=j+1
		
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:45:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	if(x[j]>0):
		print(j)
		j=j+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:45:34) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	if(x[j]==0):
		print(j)
		j=j+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:46:04) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	if(x[j]==0):
		print(j)
		j=j+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:46:27) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	if(x[j])==(0):
		print(j)
		j=j+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:46:52) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
while(size(x)>j):
	if(x[j])==(0):
		print(j)
		j=j+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:47:49) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[f])==(0):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:48:13) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[f])==(-1):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:48:50) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
print(x[2])
while(size(x)>j):
	if(x[f])==(-1):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:49:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
print(x[2])
while(size(x)>j):
	if(x[f])==(-1):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:49:35) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
if(x[1]==-1):
	print("lel")
while(size(x)>j):
	if(x[f])==(-1):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:50:01) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
if(x[1]==-1):
	print("lel")
while(size(x)>j):
	if(x[j]==-1):
		print(j)
		j=j+1
		f=f+1

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:55:10) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:55:26) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
print(f)		
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:57:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
print(f,i)		
	
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 22:59:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
print(f,i,u)		
	
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:02:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
	
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:02:59) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
print(w/(size(x)))		
	
		


	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:04:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
print(w/((size(x)-f))		
	
		


	
	
		
		
-- ERROR:
File "XXXX", line 44
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:04:31) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
print(size(x)-1)				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:04:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
print(size(x)-f)				
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:05:45) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
q=0
i=0
while(size(x)>q):
	if(x[q]>=6):
		i=i+1
		q=q+1
	else:
		q=q+1
n=0
u=0
while(size(x)>n):
	if(x[n]>-1)and(x[n]<6):
		u=u+1
		n=n+1
	else:
		n=n+1
r=0
w=0
while(size(x)>r):
	if(x[r]>-1):
		w=w+x[r]
		r=r+1
	else:
		r=r+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:07:48) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
x=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:08:26) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
x=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:08:56) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:09:22) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:10:17) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h["3"])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:10:39) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
File "XXXX", line 4
    j=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:23) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:31) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
File "XXXX", line 4
    j=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
x=array(input("Digite o nome dos alunos: "))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
x=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:53) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
y=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:11:57) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:12:11) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[3])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:12:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:24:48) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
print(h[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:26:33) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
r=0
j=0
while(size(x)>j):
	if(x[j]==max(x)):
		r=j
		j=j+1
	else:
		j=j+1
print(r)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 23:27:14) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
r=0
j=0
while(size(x)>j):
	if(x[j]==max(x)):
		r=j
		j=j+1
	else:
		j=j+1
print(h[r])		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 23:27:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
r=0
j=0
while(size(x)>j):
	if(x[j]==max(x)):
		r=j
		j=j+1
	else:
		j=j+1
print(h[r])		

-- EXECUTION TIME:
0.305179
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:02:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
r=0
j=0
while(size(x)>j):
	if(x[j]==max(x)):
		r=j
		j=j+1
	else:
		j=j+1
print(h[r])		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:03:35) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as notas: ")))
h=array(eval(input("Digite o nome dos alunos: ")))
j=0
f=0
while(size(x)>j):
	if(x[j]==-1):
		f=f+1
		j=j+1
	else:
		j=j+1
j=0
i=0
while(size(x)>j):
	if(x[j]>=6):
		i=i+1
		j=j+1
	else:
		j=j+1
j=0
u=0
while(size(x)>j):
	if(x[j]>-1)and(x[j]<6):
		u=u+1
		j=j+1
	else:
		j=j+1
j=0
w=0
while(size(x)>j):
	if(x[j]>-1):
		w=w+x[j]
		j=j+1
	else:
		j=j+1
d=size(x)-f
d=w/d
print(f)
print(i)
print(u)
print(round(d,2))
r=0
j=0
while(size(x)>j):
	if(x[j]==max(x)):
		r=j
		j=j+1
	else:
		j=j+1
print(h[r])		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
